src/objects/DS_CBCL_B__c.object
<CustomObject>
    <fields>
        <fullName>BCBTSR__c</fullName>
        <description>CBCL Total raw score</description>
        <label>BCBTSR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTSSY__c</fullName>
        <description>CBCL Total clinical significance</description>
        <label>BCBTSSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTSS__c</fullName>
        <description>CBCL Total clinical significance</description>
        <label>BCBTSS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTSTNY__c</fullName>
        <description>CBCL Total T score - Num</description>
        <label>BCBTSTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBTSTN__c</fullName>
        <description>CBCL Total T score - Num</description>
        <label>BCBTSTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBTSTY__c</fullName>
        <description>CBCL Total T score</description>
        <label>BCBTSTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTST__c</fullName>
        <description>CBCL Total T score</description>
        <label>BCBTST</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBWDP__c</fullName>
        <description>CBCL Withdrawn/Depressed percent</description>
        <label>BCBWDP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBWDRN__c</fullName>
        <description>CBCL Withdrawn/Depressed raw score - Num</description>
        <label>BCBWDRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBWDR__c</fullName>
        <description>CBCL Withdrawn/Depressed raw score</description>
        <label>BCBWDR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBWDS__c</fullName>
        <description>CBCL Withdrawn/Depressed clinical significance</description>
        <label>BCBWDS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBWDTN__c</fullName>
        <description>CBCL Withdrawn/Depressed T score - Num</description>
        <label>BCBWDTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBWDT__c</fullName>
        <description>CBCL Withdrawn/Depressed T score</description>
        <label>BCBWDT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBWPY__c</fullName>
        <description>CBCL Withdrawn percent</description>
        <label>BCBWPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBWRNY__c</fullName>
        <description>CBCL Withdrawn raw score - Num</description>
        <label>BCBWRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBWRY__c</fullName>
        <description>CBCL Withdrawn raw score</description>
        <label>BCBWRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBWSY__c</fullName>
        <description>CBCL Withdrawn clinical significance</description>
        <label>BCBWSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBWTNY__c</fullName>
        <description>CBCL Withdrawn T score - Num</description>
        <label>BCBWTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBWTY__c</fullName>
        <description>CBCL Withdrawn T score</description>
        <label>BCBWTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBY100S__c</fullName>
        <description>Other 1, description specified</description>
        <label>BCBY100S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBY100__c</fullName>
        <description>Other 1, description</description>
        <label>BCBY100</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBY101S__c</fullName>
        <description>Other 2, description specified</description>
        <label>BCBY101S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBY101__c</fullName>
        <description>Other 2, description</description>
        <label>BCBY101</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBY102S__c</fullName>
        <description>Other 3, description specified</description>
        <label>BCBY102S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBY102__c</fullName>
        <description>Other 3, description</description>
        <label>BCBY102</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBYMETH__c</fullName>
        <description>Administration Method - CBCLYOUNG</description>
        <label>BCBYMETH</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BDOACO__c</fullName>
        <description>CBCL 6-18 date of administration</description>
        <label>BDOACO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOACY__c</fullName>
        <description>CBCL 1.5-5 date of administration</description>
        <label>BDOACY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS CBCL B</relationshipLabel>
        <relationshipName>DS_CBCL_B</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FORM__c</fullName>
        <label>FORM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>SECTION</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_CBCL_0_5__c</fullName>
        <label>STATUS CBCL 0 5</label>
        <picklist>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STATUS_CBCL_6_18__c</fullName>
        <label>STATUS CBCL 6 18</label>
        <picklist>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DS CBCL B</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>STATUS_CBCL_0_5__c</columns>
        <columns>STATUS_CBCL_6_18__c</columns>
        <columns>BDOACO__c</columns>
        <columns>BDOACY__c</columns>
        <columns>BCBOMETH__c</columns>
        <columns>BCBYMETH__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>BCBO56__c</columns>
        <columns>BCBOMETH__c</columns>
        <columns>BCBY100S__c</columns>
        <columns>BCBY101S__c</columns>
        <columns>BCBY102S__c</columns>
        <columns>BCBY102__c</columns>
        <columns>BCBYMETH__c</columns>
        <filterScope>Everything</filterScope>
        <label>All2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All3</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <filterScope>Everything</filterScope>
        <label>All3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All4</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>BCBOTPNY__c</columns>
        <columns>BCBSPRNY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All5</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2_10_old</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>STATUS_CBCL_0_5__c</columns>
        <columns>STATUS_CBCL_6_18__c</columns>
        <columns>BDOACO__c</columns>
        <columns>BDOACY__c</columns>
        <columns>BCBOMETH__c</columns>
        <columns>BCBYMETH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>2/10/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>STATUS_CBCL_6_18__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>2/10 old</label>
    </listViews>
    <listViews>
        <fullName>X2_10_young</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>STATUS_CBCL_0_5__c</columns>
        <columns>STATUS_CBCL_6_18__c</columns>
        <columns>BDOACO__c</columns>
        <columns>BDOACY__c</columns>
        <columns>BCBOMETH__c</columns>
        <columns>BCBYMETH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>2/10/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>STATUS_CBCL_0_5__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>2/10 young</label>
    </listViews>
    <listViews>
        <fullName>X2_6</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>STATUS_CBCL_0_5__c</columns>
        <columns>STATUS_CBCL_6_18__c</columns>
        <columns>BDOACO__c</columns>
        <columns>BDOACY__c</columns>
        <columns>BCBOMETH__c</columns>
        <columns>BCBYMETH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>2/6/2015 12:00 AM</value>
        </filters>
        <label>2/6</label>
    </listViews>
    <listViews>
        <fullName>X2_6_old</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>STATUS_CBCL_0_5__c</columns>
        <columns>STATUS_CBCL_6_18__c</columns>
        <columns>BDOACO__c</columns>
        <columns>BDOACY__c</columns>
        <columns>BCBOMETH__c</columns>
        <columns>BCBYMETH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>2/6/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>STATUS_CBCL_6_18__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>2/6 old</label>
    </listViews>
    <listViews>
        <fullName>X2_6_young</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>STATUS_CBCL_0_5__c</columns>
        <columns>STATUS_CBCL_6_18__c</columns>
        <columns>BDOACO__c</columns>
        <columns>BDOACY__c</columns>
        <columns>BCBOMETH__c</columns>
        <columns>BCBYMETH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>2/6/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>STATUS_CBCL_0_5__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>2/6 young</label>
    </listViews>
    <listViews>
        <fullName>reportVals</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>STATUS_CBCL_0_5__c</columns>
        <columns>STATUS_CBCL_6_18__c</columns>
        <columns>BCBTSP__c</columns>
        <columns>BCBTSPY__c</columns>
        <columns>BCBTSS__c</columns>
        <columns>BCBTSSY__c</columns>
        <columns>BCBTST__c</columns>
        <columns>BCBTSTY__c</columns>
        <columns>BCBTSTN__c</columns>
        <columns>BCBTSTNY__c</columns>
        <filterScope>Everything</filterScope>
        <label>reportVals</label>
    </listViews>
    <nameField>
        <displayFormat>CBCL-B-{000000}</displayFormat>
        <label>DS CBCL B ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DS CBCL B</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CBCL_date_required</fullName>
        <active>true</active>
        <description>Either CBCLO or CBCLY need to be filled out</description>
        <errorConditionFormula>ISNULL(BDOACO__c) &amp;&amp;ISNULL(BDOACY__c)</errorConditionFormula>
        <errorMessage>Please indicate the date of administration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CBCL_method_administered</fullName>
        <active>true</active>
        <description>How was this form (CBCL) administered? Either CBCL old or CBCL young must indicate the method administered.</description>
        <errorConditionFormula>ISPICKVAL(BCBOMETH__c,&apos;&apos;) &amp;&amp; ISPICKVAL(BCBYMETH__c, &apos;&apos;)</errorConditionFormula>
        <errorMessage>Please indicate how this form was administered.</errorMessage>
    </validationRules>
</CustomObject>